src/test/deca/test_compilateur/codegen/valid/created/test_modulo_auto.deca
// Description :
//		Programme pour tester le debordement de flottant
//
// Resultats :
//		Erreur de compilation
//		debordement_flottant


{
int x = 2;
x = x*x*x*x*x*x*x*x*x*x *x*x*x*x*x*x*x*x*x*x *x*x*x*x*x*x*x*x*x*x *x*x+1;
if (x == 1){print("ok");}else{print("bouuh");}
}