src/test/deca/test_compilateur/codegen/invalid/created/decl_var_sans_init.deca
// Description :
//		Programme pour tester les declarations sans initialisations
//
// Resultats :
//		Erreur de compilation
//		variable non defini


{
int a;
int b;
float f;
boolean d;
println(a);
println(b);
println(f);
if (d) {print("ok");}

}